fix social icons colour on tablet

--- a/less/header-style.less
+++ b/less/header-style.less
@@ -225,8 +225,12 @@
     color: @color-swatch3;
     font-size: 16px;
     @media @tablet {
-        color: @color-swatch7;
         font-size: 18px;
+    }
+}
+.flex-social .social-link:before {
+    @media @tablet {
+        color: @color-swatch7;
     }
 }
 .social-link:hover {
